@@ -43,12 +43,13 @@ function optimizerRuleTestSuite () {
 
       let docs = [];
       for (let i = 0; i < 5000; ++i) {
-        docs.push({ _key: "test" + i, value1: i, value2: i % 5, value3: i });
+        docs.push({_key: "test" + i, value1: i, value2: i % 5, value3: i, value4: [i, i + 1, i * 2], value5: i});
       }
       c.insert(docs);
 
       c.ensureIndex({ type: "hash", fields: ["value1"] });
       c.ensureIndex({ type: "hash", fields: ["value2"] });
+      c.ensureIndex({ type: "persistent", fields: ["value5", "value4[*]"] });
     },
 
     tearDownAll : function () {
@@ -147,8 +148,9 @@ function optimizerRuleTestSuite () {
         ["FOR i IN 1..3 LET key = CONCAT('test', i) LET sub = (FOR doc IN " + cn + " RETURN doc) LET c = COUNT(sub) RETURN [key, c]", [ ["test1", 5000], ["test2", 5000], ["test3", 5000] ] ],
         ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " FILTER doc.value1 == i RETURN doc) LET c = COUNT(sub) RETURN c", [ 1, 1, 1 ] ],
         ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " FILTER doc.value2 == i RETURN doc) LET c = COUNT(sub) RETURN c", [ 1000, 1000, 1000 ] ],
-        
+
         ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " RETURN doc) LET c = COUNT(sub) RETURN c", [ 5000, 5000, 5000 ] ],
+        ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " FILTER doc.value5 == 1 RETURN doc) LET c = COUNT(sub) RETURN c", [ 1, 1, 1 ] ],
         
         ["FOR i IN 1..3 LET key = CONCAT('none', i) LET sub = (FOR doc IN " + cn + " FILTER doc._key == key RETURN doc) LET c = COUNT(sub) RETURN [key, c]", [ ["none1", 0], ["none2", 0], ["none3", 0] ] ],
       ];
@@ -169,6 +171,7 @@ function optimizerRuleTestSuite () {
         ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " FILTER doc.value2 == i RETURN doc) LET c = COUNT(sub) RETURN c", [ 1000, 1000, 1000 ] ],
         
         ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " RETURN doc) LET c = COUNT(sub) RETURN c", [ 5000, 5000, 5000 ] ],
+        ["FOR i IN 1..3 LET sub = (FOR doc IN " + cn + " FILTER doc.value5 == 1 RETURN doc) LET c = COUNT(sub) RETURN c", [ 1, 1, 1 ] ],
         
         ["FOR i IN 1..3 LET key = CONCAT('none', i) LET sub = (FOR doc IN " + cn + " FILTER doc._key == key RETURN doc) LET c = COUNT(sub) RETURN [key, c]", [ ["none1", 0], ["none2", 0], ["none3", 0] ] ],
       ];
